# NEXUS-ENGINE

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CLEANUP_REPORT.md  DEPENDENCY_GRAPH.md  DEV_GUIDE.md  DOMAIN_MODEL.md  Dockerfile  ENGINE_MATURITY_INDEX.md  ENGINE_TEST_FLOW.md  GETTING_STARTED.md  PRODUCT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RUN-E2E.md  START_HERE.md  STRUCTURE.md  STRUCTURE_VALIDATION.md  angular.json  docker-compose.yml  nx.json  package-lock.json  package.json  pytest.ini  railway.toml  requirements-test.txt  run-all.sh  run-api-with-engines.sh  run-api.sh  run-ci.sh  run-engine-services.sh  run-engine.sh  run-local.sh  run-observability.sh  run-tests.sh  run-ui.sh  tsconfig.base.json  workspace.json
api-platform/: api-governance.md  (+3 more)
engine-ai/: project.json  pyproject.toml  requirements.txt
engine-ai/control/: __init__.py  runtime_context.py
engine-ai/errors/: __init__.py  error_model.py
engine-ai/features/: feature_extractor.py
engine-ai/health/: __init__.py  health_model.py
engine-ai/inference/: __init__.py  inference_service.py
engine-ai/models/: __init__.py  model_health.py  model_manager.py
engine-ai/observability/: __init__.py  enterprise_logger.py  inference_observability.py
engine-ai/pipelines/: ai_pipeline.py
engine-ai/registry/: model_registry.py
engine-ai/resilience/: __init__.py  resilience_policy.py
engine-ai/tests/: conftest.py  test_core.py  test_engine.py  test_pipeline.py
engine-ai/training/: trainer.py
engine-ai/validation/: __init__.py  inference_validation.py  validation_layer.py
(+1533 files in other folders)
